made SVG scalable

--- a/app/styles/base.scss
+++ b/app/styles/base.scss
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 
-html, body, #app {
+html, body {
   height: 100%;
 }
 
@@ -13,5 +13,66 @@ body {
 }
 
 a {
-  color: #00D8FF;
+  color: #00d8ff;
+}
+
+#app {
+  display: flex;
+  height:  100vh;
+}
+
+svg {
+  flex: 1;
+}
+
+svg text.name {
+  //font-family: Arial, Sans-serif;
+  font-size: 12px;
+  opacity:   0.25
+}
+
+svg line.quadrant {
+  stroke-width: 2px;
+}
+
+svg circle.horizon {
+  stroke:         #999;
+  stroke-width:   2px;
+  stroke-opacity: 0;
+  fill:           none;
+}
+
+svg line.direction {
+  stroke:       black;
+  stroke-width: 5px;
+  marker-end:   url(#arrow);
+  opacity:      0.2;
+}
+
+svg #arrow {
+  fill: black;
+}
+
+//svg path.quadrant {
+//  fill-opacity: 0.5;
+//}
+
+svg text.quadrant {
+  font-family: Arial, Sans-serif;
+  font-weight: bold;
+  color:       white;
+  opacity:     0.3;
+  font-size:   40px;
+  text-align:  right;
+}
+
+.blip {
+  circle {
+    cursor:     pointer;
+    background: transparent;
+  }
+
+  &:hover text {
+    opacity: 1;
+  }
 }
