--- a/app/styles/base.scss
+++ b/app/styles/base.scss
@@ -1,10 +1,9 @@
-@import 'reset';
-
 * {
   box-sizing: border-box;
 }
 
 body {
+  margin:      0;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
