--- a/app/components/nav/style.scss
+++ b/app/components/nav/style.scss
@@ -1,30 +1,60 @@
-:local(.items),
-:local(.subitems) {
+:local(.cards),
+:local(.quadrants) {
   list-style: none;
   margin:     0;
   padding:    0;
 }
 
-:local(.subitems) {
-  margin: 5px;
+:local(.quadrants) {
+  //margin: 5px;
 }
 
-:local(.item--segment) {
-  margin: 0 0 0 5px;
+:local(.quadrant) {
+  margin: 1px 0 0;
+
+  &:first-child {
+    margin: 0;
+  }
 }
 
-:local(.subitem__label) {
-  margin:  0;
-  padding: 5px;
+:local(.quadrant__label) {
+  margin:       0;
+  padding:      5px 10px;
+  font-variant: small-caps;
+  font-size:    120%;
+  background:   #666;
+  color:        #ccc;
 }
 
-:local(.item__label) {
-  margin:  1px 0 0 0;
-  padding: 5px 10px;
-  cursor:  pointer;
+:local(.card) {
+
 }
 
-:local(.item__desc) {
+:local(.card__label) {
+  position:   relative;
+  margin:     1px 0 0 0;
+  cursor:     pointer;
+  background: #eee;
+
+  &:hover :local(.card__label__prompt) {
+    width: 100%;
+  }
+}
+
+:local(.card__label__prompt) {
+  transition: 0.5s width;
+  position:   absolute;
+  width:      10px;
+  height:     100%;
+}
+
+:local(.card__label__text) {
+  position: relative;
+  display:  block;
+  padding:  5px 15px;
+}
+
+:local(.card__desc) {
   margin:     0;
   padding:    10px;
   font-size:  85%;
