--- a/app/styles/base.scss
+++ b/app/styles/base.scss
@@ -11,10 +11,6 @@ a {
   color: #00d8ff;
 }
 
-.app {
-
-}
-
 .radar {
   display:    flex;
   height:     100vh;
@@ -27,56 +23,9 @@ a {
   padding: 20px;
 }
 
-svg text.name {
-  text-anchor: middle;
-  font-size:   12px;
-  opacity:     0.25
-}
-
-svg line.quadrant {
-  stroke-width: 2px;
-}
-
-svg circle.horizon {
-  stroke:         #999;
-  stroke-width:   2px;
-  stroke-opacity: 0;
-}
-
-svg line.direction {
-  stroke:       black;
-  stroke-width: 5px;
-  marker-end:   url(#arrow);
-  opacity:      0.2;
-}
-
-svg #arrow {
-  fill: black;
-}
-
-svg text.quadrant {
-  font-weight: bold;
-  font-size:   24px;
-  text-align:  right;
-  opacity:     0.25;
-  color:       white;
-}
-
-.blip {
-  cursor: pointer;
-
-  circle {
-    fill: rgba(black, 1);
-  }
-
-  &:hover text {
-    opacity: 1;
-  }
-}
-
 .radar__nav {
   flex-basis: 300px;
 
   overflow-y: scroll;
-  background: #fff;
+  //background: #fff;
 }
