--- a/app/components/chart/style.scss
+++ b/app/components/chart/style.scss
@@ -4,13 +4,12 @@
   stroke-opacity: 0;
 }
 
-:local(.quadrant) {
-  stroke-width: 2px;
-  font-weight:  bold;
-  font-size:    24px;
-  text-align:   right;
-  opacity:      0.25;
-  color:        white;
+:local(.quadrantlabel) {
+  font-weight: bold;
+  font-size:   24px;
+  text-anchor: middle;
+  opacity:     0.25;
+  color:       white;
 }
 
 :local(.blip) {
