--- a/app/components/nav/style.scss
+++ b/app/components/nav/style.scss
@@ -3,6 +3,7 @@
   list-style: none;
   margin:     0;
   padding:    0;
+  font-size:  12px;
 }
 
 :local(.quadrants) {
@@ -18,12 +19,13 @@
 }
 
 :local(.quadrant__label) {
-  margin:       0;
-  padding:      5px 10px;
-  font-variant: small-caps;
-  font-size:    120%;
-  background:   #666;
-  color:        #ccc;
+  margin:         0;
+  padding:        2px 5px;
+  font-variant:   small-caps;
+  text-transform: lowercase;
+  font-size:      120%;
+  background:     #666;
+  color:          #ccc;
 }
 
 :local(.card) {
@@ -51,12 +53,12 @@
 :local(.card__label__text) {
   position: relative;
   display:  block;
-  padding:  5px 15px;
+  padding:  3px 15px;
 }
 
 :local(.card__desc) {
   margin:     0;
-  padding:    10px;
+  padding:    5px;
   font-size:  85%;
   background: #fff;
 }
