--- a/app/styles/base.scss
+++ b/app/styles/base.scss
@@ -20,11 +20,11 @@ a {
 .radar__chart {
   flex:    2;
 
-  padding: 40px;
+  padding: 20px;
 }
 
 .radar__nav {
-  flex-basis: 300px;
+  flex-basis: 22.5%;
 
   overflow-y: scroll;
   background: #fff;
