--- a/app/components/application/style.scss
+++ b/app/components/application/style.scss
@@ -1,27 +1,20 @@
-:local(.main) {
-  //display:         flex;
-  //justify-content: center;
-  //align-items:     center;
-  //
-  //width:           100%;
-  //height:          100%;
-  //font-family:     "Helvetica Neue", sans-serif;
-  //background-image: linear-gradient(steelblue, darken(steelblue, 30));
-  //background-size: cover;
+:local(.unsupported) {
+  display:         flex;
+  flex-direction:  column;
+  justify-content: center;
+  align-items:     center;
+
+  height: 100vh;
 }
 
-:local(.wrap) {
-  //width:         960px;
-  //background:    white;
-  //padding:       1em;
-  //border-radius: .3em;
-  //box-shadow:    0 0 40px rgba(black, .1);
+:local(.radar) {
+  display: flex;
+  height:  100vh;
 }
 
-:local(.body) {
-  //line-height: 1.4em;
-  //
-  //p {
-  //  margin-bottom: 1em;
-  //}
+:local(.radar__nav) {
+  flex-basis: 22.5%;
+
+  overflow-y: scroll;
+  background: #fff;
 }
