--- a/app/components/chart/style.scss
+++ b/app/components/chart/style.scss
@@ -1,15 +1,29 @@
-:local(.radar__chart) {
-  flex:    2;
+:local(.container) {
+  opacity:   0;
 
-  padding: 30px;
-  background: url('../../images/tm.svg') center center no-repeat;
-  background-size: 60px;
+  animation: fadeup 0.5s linear forwards;
 }
 
 :local(.horizon) {
   stroke:         #999;
   stroke-width:   2px;
   stroke-opacity: 0;
+}
+
+%horizonlabel,
+:local(.horizonlabel) {
+  transition:        fill 0.5s;
+  text-transform:    lowercase;
+  font-variant:      small-caps;
+
+  dominant-baseline: middle;
+  text-anchor:       end;
+}
+
+:local(.horizonlabel--active) {
+  @extend %horizonlabel;
+
+  fill: #eee;
 }
 
 :local(.quadrantlabel) {
