--- a/app/components/nav/style.scss
+++ b/app/components/nav/style.scss
@@ -7,9 +7,13 @@
 }
 
 :local(.quadrants) {
-  opacity:   0;
+  flex:          1;
 
-  animation: fadeup 0.5s linear forwards;
+  overflow-y:    scroll;
+  padding-right: 10px;
+  opacity:       0;
+
+  animation:     fadeup 0.5s linear forwards;
 }
 
 :local(.quadrant) {
@@ -69,9 +73,6 @@
   position: relative;
   display:  block;
   padding:  3px 15px;
-
-  //color: #eee;
-  //mix-blend-mode: hard-light;
 }
 
 :local(.card__desc) {
