--- a/app/styles/base.scss
+++ b/app/styles/base.scss
@@ -30,10 +30,13 @@ a {
 }
 
 .radar__nav {
-  flex-basis: 22.5%;
+  flex-basis:     22.5%;
 
-  overflow-y: scroll;
-  background: #333;
+  display:        flex;
+  flex-direction: column;
+
+  overflow:       hidden;
+  background:     #333;
 }
 
 %proto-anim {
