--- a/app/components/nav/style.scss
+++ b/app/components/nav/style.scss
@@ -7,12 +7,10 @@
 }
 
 :local(.quadrants) {
-  flex:        1;
+  overflow-y: scroll;
+  opacity:    0;
 
-  overflow-y:  scroll;
-  opacity:     0;
-
-  animation:   fadeup 0.5s linear forwards;
+  animation:  fadeup 0.5s linear forwards;
 }
 
 :local(.quadrant) {
@@ -36,11 +34,20 @@
 
 :local(.quadrant__cards) {
   flex: 1;
+
+  li {
+    display: block;
+  }
 }
 
 :local(.card__label) {
   position:   relative;
+  display:    block;
+  width:      100%;
   margin:     1px 0 0 0;
+  padding:    0;
+  border:     none;
+  text-align: left;
   cursor:     pointer;
   background: #eee;
 
@@ -50,8 +57,12 @@
 }
 
 :local(.card__label__prompt) {
+  transform:  translateZ(0);
   transition: 0.5s width;
+
   position:   absolute;
+  display:    block;
+  left:       0;
   width:      10px;
   height:     100%;
 }
@@ -59,7 +70,29 @@
 :local(.card__label__text) {
   position: relative;
   display:  block;
+  width:    100%;
   padding:  3px 15px;
+}
+
+:local(.card__content) {
+  transition: 1s max-height;
+
+  max-height: 0;
+  overflow-y: scroll;
+
+  :local(.card__desc) {
+    display: none;
+  }
+}
+
+:local(.card__content--open) {
+  composes:   card__content;
+
+  max-height: 400px;
+
+  :local(.card__desc) {
+    display: block;
+  }
 }
 
 :local(.card__desc) {
