--- a/app/components/nav/style.scss
+++ b/app/components/nav/style.scss
@@ -1,19 +1,25 @@
-:local(.quadrant__cards),
-:local(.quadrants) {
+@keyframes fadeup {
+  to {
+    opacity: 1;
+  }
+}
+
+.quadrant__cards,
+.quadrants {
   list-style: none;
   margin:     0;
   padding:    0;
   font-size:  12px;
 }
 
-:local(.quadrants) {
+.quadrants {
   overflow-y: scroll;
   opacity:    0;
 
   animation:  fadeup 0.5s linear forwards;
 }
 
-:local(.quadrant) {
+.quadrant {
   margin:     1px 0 0;
   background: #333;
 
@@ -22,7 +28,7 @@
   }
 }
 
-:local(.quadrant__label) {
+.quadrant__label {
   margin:         5px 15px;
   line-height:    1;
   font-size:      14px;
@@ -32,7 +38,7 @@
   color:          #ccc;
 }
 
-:local(.quadrant__cards) {
+.quadrant__cards {
   flex: 1;
 
   li {
@@ -40,23 +46,20 @@
   }
 }
 
-:local(.card__btn) {
+.card__btn {
   position:   relative;
   display:    block;
   width:      100%;
   margin:     1px 0 0 0;
   padding:    0;
   border:     none;
+  outline:     none;
   text-align: left;
   cursor:     pointer;
   background: #eee;
-
-  &:hover :local(.card__btn__prompt) {
-    width: 100%;
-  }
 }
 
-:local(.card__btn__prompt) {
+.card__btn__prompt {
   transform:  translateZ(0);
   transition: 0.5s width;
 
@@ -65,37 +68,37 @@
   left:       0;
   width:      10px;
   height:     100%;
+
+  .card__btn:matches(:focus, :hover) & {
+    width: 100%;
+  }
 }
 
-:local(.card__btn__text) {
+.card__btn__text {
   position: relative;
   display:  block;
   width:    100%;
   padding:  3px 15px;
 }
 
-:local(.card__content) {
+.card__content {
   transition: 1s max-height;
 
   max-height: 0;
-  overflow-y: scroll;
-
-  :local(.card__desc) {
-    display: none;
-  }
+  overflow-y: hidden;
 }
 
-:local(.card__content--open) {
+.card__content--open {
   composes:   card__content;
 
   max-height: 400px;
 
-  :local(.card__desc) {
+  .card__desc {
     display: block;
   }
 }
 
-:local(.card__desc) {
+.card__desc {
   margin:     0;
   padding:    5px;
   font-size:  85%;
