--- a/src/styles/base.pcss
+++ b/src/styles/base.pcss
@@ -1,15 +1,16 @@
+/*
 $animTimeCirc: 0.7s;
 $animTimeLine: 0.3s;
 $animTime: $animTimeCirc + $animTimeLine;
+*/
 
-* {
-  box-sizing: border-box;
+:root {
+  font-family:      "Helvetica Neue", Helvetica, Arial, sans-serif;
+  background-color: #999;
 }
 
-body {
-  margin:      0;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  background:  #999;
+ul {
+  padding-left: 20px;
 }
 
 a {
