--- a/src/components/chart/style.pcss
+++ b/src/components/chart/style.pcss
@@ -1,20 +1,6 @@
-@keyframes dash {
-  to {
-    stroke-dashoffset: 0;
-  }
-}
-
-@keyframes fadeup {
-  to {
-    opacity: 1;
-  }
-}
-
-.proto-anim {
-  animation: dash $animTimeCirc linear forwards;
-}
-
 .proto {
+  composes: dash from '../../styles/animation.pcss';
+
   stroke:       #666;
   stroke-width: 0.5;
   fill:         transparent;
@@ -22,7 +8,6 @@
 
 .proto--horizon {
   composes: proto;
-  composes: proto-anim;
 
   /*
   $pi: 3.141592653589793;
@@ -49,7 +34,6 @@
 
 .proto--line {
   composes: proto;
-  composes: proto-anim;
 
   stroke-dasharray:          400;
   stroke-dashoffset:         400;
@@ -59,9 +43,7 @@
 }
 
 .container {
-  opacity:   0;
-
-  animation: fadeup 0.5s linear forwards;
+  composes: fade-up from '../../styles/animation.pcss';
 }
 
 .horizon {
