--- a/src/components/nav/style.pcss
+++ b/src/components/nav/style.pcss
@@ -1,9 +1,3 @@
-@keyframes fadeup {
-  to {
-    opacity: 1;
-  }
-}
-
 .quadrant__cards,
 .quadrants {
   list-style: none;
@@ -13,10 +7,9 @@
 }
 
 .quadrants {
-  overflow-y: scroll;
-  opacity:    0;
+  composes: fade-up from '../../styles/animation.pcss';
 
-  animation:  fadeup 0.5s linear forwards;
+  overflow-y: scroll;
 }
 
 .quadrant {
@@ -82,7 +75,7 @@
 }
 
 .card__content {
-  transition: 1s max-height;
+  transition: 1s max-height ease-in-out;
 
   max-height: 0;
   overflow:   hidden;
@@ -91,8 +84,8 @@
 .card__content--open {
   composes:   card__content;
 
-  max-height: 500px;
-  overflow-y: scroll;
+  max-height: 700px;
+  /*overflow-y: scroll;*/
 
   .card__desc {
     display: block;
