Nearly there: compiling jsx as template; need to add babel plugin to ignore css imports

--- a/src/components/chart/styles.pcss
+++ b/src/components/chart/styles.pcss
@@ -43,7 +43,7 @@
 }
 
 .container {
-  composes: fade-up from '../../styles/animation.pcss';
+  composes: fadeup from '../../styles/animation.pcss';
 }
 
 .horizon {
