--- a/src/components/nav/styles.pcss
+++ b/src/components/nav/styles.pcss
@@ -7,7 +7,7 @@
 }
 
 .quadrants {
-  composes: fade-up from '../../styles/animation.pcss';
+  composes: fadeup from '../../styles/animation.pcss';
 
   overflow-y: scroll;
 }
@@ -85,7 +85,6 @@
   composes:   card__content;
 
   max-height: 700px;
-  /*overflow-y: scroll;*/
 
   .card__desc {
     display: block;
