--- a/src/styles/animation.pcss
+++ b/src/styles/animation.pcss
@@ -1,14 +1,18 @@
+/* Fade up
+/*-----------------------------------------------*/
 @keyframes fadeup {
   to {
     opacity: 1;
   }
 }
 
-.fade-up {
+.fadeup {
   opacity:   0;
   animation: fadeup 0.5s linear forwards;
 }
 
+/* Dash
+/*-----------------------------------------------*/
 @keyframes dash {
   to {
     stroke-dashoffset: 0;
