--- a/src/components/application/styles.pcss
+++ b/src/components/application/styles.pcss
@@ -12,7 +12,7 @@
   composes:        radar__el;
 
   width:           75%;
-  padding:         1%;
+  padding:         35px;
   background:      url('../../images/tm.svg') center center no-repeat;
   background-size: 60px;
 }
