--- a/src/components/nav/styles.pcss
+++ b/src/components/nav/styles.pcss
@@ -15,7 +15,8 @@
 }
 
 .quadrant {
-  margin:     1px 0 0;
+  //margin:     1px 0 0;
+  //border-top: 1px solid #333;
   background: #333;
 
   &:first-child {
@@ -24,7 +25,7 @@
 }
 
 .quadrant__label {
-  margin:         5px 15px;
+  padding:         5px 15px;
   line-height:    1;
   font-size:      14px;
   font-weight:    100;
@@ -46,9 +47,10 @@
   position:   relative;
   display:    block;
   width:      100%;
-  margin:     1px 0 0 0;
+  //margin:     1px 0 0 0;
   padding:    0;
   border:     none;
+  border-top: 1px solid #333;
   outline:    none;
   text-align: left;
   cursor:     pointer;
