--- a/src/components/radar/chart/styles.pcss
+++ b/src/components/radar/chart/styles.pcss
@@ -1,5 +1,5 @@
 .proto {
-  composes: dash from '../../styles/animation.pcss';
+  composes: dash from 'styles/animation.pcss';
 
   stroke:       #666;
   stroke-width: 0.5;
@@ -43,28 +43,8 @@
 }
 
 .container {
-  composes: fadeup from '../../styles/animation.pcss';
-}
-
-.horizon {
-  stroke:         #999;
-  stroke-width:   2px;
-  stroke-opacity: 0;
-}
-
-.horizonlabel {
-  transition:        fill 0.5s;
-  text-transform:    lowercase;
-  font-variant:      small-caps;
-
-  dominant-baseline: middle;
-  text-anchor:       end;
-}
-
-.horizonlabel--active {
-  composes: horizonlabel;
-
-  fill: #eee;
+  composes: fadeup from 'styles/animation.pcss';
+  display: block;
 }
 
 .quadrantlabel {
@@ -72,27 +52,4 @@
   font-weight: 200;
   text-anchor: middle;
   opacity:     0.5;
-}
-
-.blip {
-  cursor:     pointer;
-  background: red;
-
-  circle {
-    fill: rgba(black, 1);
-  }
-
-  &:hover .blip__name {
-    opacity:   1;
-    font-size: 12px;
-  }
-}
-
-.blip__name {
-  transition:        0.25s opacity, 0.25s font-size;
-
-  text-anchor:       middle;
-  dominant-baseline: text-bottom;
-  font-size:         8px;
-  opacity:           0.4;
 }
